--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ subtitle:
 description:
 keywords:
 author: 北冥冰皇
-language:
-timezone:
+language: zh-Hans
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
