--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -243,7 +243,7 @@ post_wordcount:
   #description: ex. subscribe to my blog by scanning my public wechat account
 
 # Reward
-reward_comment: 请多支持！
+reward_comment: 欢迎打赏！
 wechatpay: /images/weixin.jpg
 alipay: /images/zhifubao.jpg
 #bitcoin: /images/bitcoin.png
